force-app/main/default/objects/Facility_Hours__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>