force-app/main/default/objects/Facility_Hours__c/fields/Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Closing_Time__c</fullName>
    <label>Closing Time</label>
    <type>Time</type>
</CustomField>