force-app/main/default/objects/Facility_Hours__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>