force-app/main/default/objects/Facility_Hours__c/fields/Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility__c</fullName>
    <label>Medical Facility</label>
    <referenceTo>Medical_Facility__c</referenceTo>
    <relationshipLabel>Facility Hours</relationshipLabel>
    <relationshipName>Facility_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>