force-app/main/default/objects/Facility_Hours__c/fields/Opening_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Time__c</fullName>
    <label>Opening Time</label>
    <type>Time</type>
</CustomField>